# my-domain-android

./: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mydomain/android/: MainActivity.kt  NetService.kt  NotifListener.kt  RustNet.kt
app/src/main/java/com/mydomain/android/core/: NetworkingUtils.kt
app/src/main/java/com/mydomain/android/presentation/components/: SettingsDialog.kt
app/src/main/java/com/mydomain/android/presentation/screens/: LoginScreen.kt  MainScreen.kt
app/src/main/res/values/: strings.xml  themes.xml
rust/: Cargo.toml
rust/src/: lib.rs
